# code-duplication-scanner

./: .gitignore  Makefile  README.md  does_the_genie_understand_code.md  pyproject.toml
.codex/: config.toml
docs/: DESIGN.md
docs/experiments/obfuscation/: 2026-02-22-obfuscation-implementation-plan.md  2026-02-22-obfuscation-rules-implementation-plan.md  DESIGN.md
docs/plans/: 2026-02-20-phase1-model-design.md  2026-02-20-phase2-intent-enrichment-design.md  2026-02-20-phase3-persistence-design.md  2026-02-20-phase4-dup-check-design.md
docs/post/: analyze_project.py  av.py  es.py  renamer.py
src/cds/: __init__.py  analyzer.py  csv_md5_intent_check.py  duplication.py  intent_enricher.py  llm_client.py  main.py  model.py  model_builder.py  normalizer.py  ollama.py  persistence.py  python_analyzer.py
src/cds/analyzers/: __init__.py  python.py
src/cds/database/: __init__.py  sqlite.py
src/cds/llm/: __init__.py  openai_client.py
src/cli/: __init__.py  cli_verification_harness.py  obfuscation_harness.py
src/obfuscation/: __init__.py  analyzer.py  mapper.py  rewriter.py
tests/: conftest.py
tests/unit/: test_duplication.md  test_duplication.py  test_model_build.md  test_model_build.py  test_obfuscation_analyzer.md  test_obfuscation_analyzer.py  test_obfuscation_cross_file.md  test_obfuscation_cross_file.py  test_obfuscation_harness.md  test_obfuscation_harness.py  test_obfuscation_mapper.md  test_obfuscation_mapper.py  test_obfuscation_rewriter.md  test_obfuscation_rewriter.py  test_persistence.md  test_persistence.py
